--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="label_empresa">Empresa</string>
     <string name="label_cor">Cor</string>
     <string name="label_confirnar">Criar Cartão</string>
+    <string name="Label_show_success">Cartão cadastrado com sucesso!</string>
 </resources>
