FINALIZANDO PROJETO/COMPARTILHAMENTO DO CARTÃO DE VISITAS

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="label_cor">Cor</string>
     <string name="label_confirnar">Criar Cartão</string>
     <string name="Label_show_success">Cartão cadastrado com sucesso!</string>
+    <string name="label_share">Compartilhar</string>
 </resources>
